A loooot of improvements

--- a/.config/hypr/config/hyprland/autostart.conf
+++ b/.config/hypr/config/hyprland/autostart.conf
@@ -17,7 +17,7 @@ exec-once = hyprpaper
 exec-once = hypridle
 
 # Start notification daemon
-exec-once = mako
+exec-once = swaync
 
 # Start elephant + walker (app launcher and so on)
 exec-once = elephant
