--- a/.config/hypr/config/hyprland/keybindings.conf
+++ b/.config/hypr/config/hyprland/keybindings.conf
@@ -3,7 +3,7 @@ $mainMod = SUPER # Main mod, windows key by default
 # Set the custom main mod for keybinds
 source = ~/.config/hypr/custom/hyprland/keybindings-mod.conf
 
-bind = $mainMod, T, exec, kitty # Open Kitty
+bind = $mainMod, RETURN, exec, kitty # Open Kitty
 bind = $mainMod, Q, killactive, # Kill active window
 bind = $mainMod, E, exec, kitty -e yazi # Open Yazi (file explorer)
 bind = $mainMod, F, togglefloating, # Toggle floting state
