--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,13 +1,13 @@
 [Appearance]
-color_scheme_path=/usr/share/qt6ct/colors/darker.conf
+color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
 icon_theme=breeze-dark
 standard_dialogs=default
 style=Fusion
 
 [Fonts]
-fixed="CommitMono Nerd Font,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
-general="CommitMono Nerd Font,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+fixed="CommitMono Nerd Font,12,-1,5,50,0,0,0,0,0,Regular"
+general="CommitMono Nerd Font,12,-1,5,50,0,0,0,0,0,Regular"
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\xf\0\0\0\0\0\0\0\x12\xac\0\0\x4\x1\0\0\xf\0\0\0\0\0\0\0\x12\xac\0\0\x4\x1\0\0\0\x2\x2\0\0\0\a\x80\0\0\xf\0\0\0\0\0\0\0\x12\xac\0\0\x4\x1)
+geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\0\0\0\v,\0\0\x4\x1\0\0\0\0\0\0\0\0\0\0\x3\xac\0\0\x2\x62\0\0\0\x1\x2\0\0\0\a\x80\0\0\a\x80\0\0\0\0\0\0\v,\0\0\x4\x1)"
 
 [Troubleshooting]
 force_raster_widgets=1
