--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -1,15 +1,5 @@
 "$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
 
-[[plugin.prepend_fetchers]]
-id  = "git"
-url = "*"
-run = "git"
-
-[[plugin.prepend_fetchers]]
-id  = "git"
-url = "*/"
-run = "git"
-
 [mgr]
 ratio          = [ 2, 3, 3 ]
 sort_by        = "alphabetical"
@@ -38,58 +28,65 @@ ueberzug_offset = [ 0, 0, 0, 0 ]
 
 [opener]
 edit = [
-	{ run = "code %s",  desc = "Abrir en VS Code",              for = "linux",  orphan = true },
+	{ run = "xdg-open %s",                    desc = "Editar",                        for = "linux",  block = false,  orphan = true },
+]
+edit-text = [
+	{ run = "nvim %s",                        desc = "Editar con NeoVim",             for = "linux",  block = false,  orphan = true },
+	{ run = "code %s",                        desc = "Editar con VS Code",            for = "linux",  block = false,  orphan = true },
+]
+edit-image = [
+	{ run = "krita %s",                       desc = "Editar con Krita",              for = "linux",  block = false,  orphan = true },
+]
+edit-video = [
+	{ run = "ghb -d %s",                      desc = "Editar con Handbrake",          for = "linux",  block = false,  orphan = true },
 ]
 play = [
-	{ run = "xdg-open %s1",  desc = "Reproducir por defecto",  for = "linux",  orphan = true },
-	{ run = "vlc %s1",       desc = "Abrir con VLC",           for = "linux",  orphan = true },
+	{ run = "xdg-open %s1",                   desc = "Reproducir",                    for = "linux",  block = false,  orphan = true },
+	{ run = "vlc %s1",                        desc = "Reproducir con VLC",            for = "linux",  block = false,  orphan = true },
 ]
 open = [
-	{ run = "xdg-open %s1",  desc = "Abrir por defecto",  for = "linux" },
-]
-keepassxc = [
-	{ run = "keepassxc %s1",  desc = "Abrir con KeePassXC",  for = "linux" },
+	{ run = "xdg-open %s1",                   desc = "Abrir",                         for = "linux",  block = false,  orphan = false },
 ]
 reveal = [
-	{ run = "xdg-open %d1",                                                   desc = "Abrir directorio en Kitty",       for = "linux" },
+	{ run = "xdg-open %d1",                   desc = "Mostrar en Kitty",              for = "linux",  block = false,  orphan = false },
 ]
 extract = [
-	{ run = "ya pub extract --list %s",  desc = "Extraer aquí" },
+	{ run = "ya pub extract --list %s",       desc = "Extraer aquí",                  for = "linux",  block = false,  orphan = false },
 ]
 download = [
-	{ run = "ya emit download --open %S",  desc = "Descargar y abrir" },
-	{ run = "ya emit download %S",         desc = "Descargar" },
+	{ run = "ya emit download --open %S",     desc = "Descargar e abrir",             for = "linux",  block = false,  orphan = false },
+	{ run = "ya emit download %S",            desc = "Descargar",                     for = "linux",  block = false,  orphan = false },
 ]
 bulk-rename = [
-	{ run = "code --wait %s",  desc = "Renomear en masa",  block = true },
+	{ run = "nvim --wait %s",                 desc = "Renomear en masa",              for = "linux",  block = true,  orphan = false },
 ]
 
 [open]
 rules = [
-	# Folder
-	{ url = "*/", use = [ "edit", "open", "reveal" ] },
-	# Text
-	{ mime = "text/*", use = [ "edit", "reveal" ] },
-	# Image
-	{ mime = "image/*", use = [ "open", "reveal" ] },
-	# Media
-	{ mime = "{audio,video}/*", use = [ "play", "reveal" ] },
-	# Archive
-	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", use = [ "extract", "reveal" ] },
+	# Carpeta
+	{ url = "*/",                                                                                             use = [ "edit-text", "open", "reveal" ] },
+	# Texto
+	{ mime = "text/*",                                                                                        use = [ "edit-text", "open", "reveal" ] },
 	# JSON
-	{ mime = "application/{json,ndjson}", use = [ "edit", "reveal" ] },
-	{ mime = "*/javascript", use = [ "edit", "reveal" ] },
-	# Empty file
-	{ mime = "inode/empty", use = [ "edit", "reveal" ] },
-	# Virtual file system
-	{ mime = "vfs/{absent,stale}", use = "download" },
-	# KeePassXC
-	{ url = "*.kdbx", use = [ "keepassxc", "reveal" ] },
+	{ mime = "application/{json,ndjson}",                                                                     use = [ "edit-text", "open", "reveal" ] },
+	{ mime = "*/javascript",                                                                                  use = [ "edit-text", "open", "reveal" ] },
+	# Imaxe
+	{ mime = "image/*",                                                                                       use = [ "edit-image", "open", "reveal" ] },
+	# Vídeo
+	{ mime = "video/*",                                                                                       use = [ "edit-video", "play", "reveal" ] },
+	# Audio
+	{ mime = "video/*",                                                                                       use = [ "play", "reveal" ] },
+	# Archivo
+	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}",   use = [ "extract", "reveal" ] },
+	# Arquivo valeiro
+	{ mime = "inode/empty",                                                                                   use = [ "edit-text", "reveal" ] },
+	# Sistema de arquivos virtual
+	{ mime = "vfs/{absent,stale}",                                                                            use = [ "download" ] },
 	# Fallback
-	{ url = "*", use = [ "open", "reveal" ] },
+	{ url = "*",                                                                                              use = [ "open", "reveal" ] },
 ]
 prepend_rules = [
-	{url = "bulk-rename.txt",  use = "bulk-rename"}
+	{ url = "bulk-rename.txt",                                                                                use = [ "bulk-rename" ] }
 ]
 
 [tasks]
@@ -101,77 +98,81 @@ image_bound      = [ 10000, 10000 ]
 suppress_preload = false
 
 [plugin]
+prepend_fetchers = [
+	{ id  = "git",    url = "*",           run = "git" },
+	{ id  = "git",    url = "*/",          run = "git" },
+]
 fetchers = [
-	# Mimetype
-	{ id = "mime", url = "*/",         run = "mime.dir", prio = "high" },
-	{ id = "mime", url = "local://*",  run = "mime.local", prio = "high" },
-	{ id = "mime", url = "remote://*", run = "mime.remote", prio = "high" },
+	# MIME type
+	{ id = "mime",    url = "*/",          run = "mime.dir",     prio = "high" },
+	{ id = "mime",    url = "local://*",   run = "mime.local",   prio = "high" },
+	{ id = "mime",    url = "remote://*",  run = "mime.remote",  prio = "high" },
 ]
 spotters = [
-	{ url = "*/", run = "folder" },
-	# Code
-	{ mime = "text/*", run = "code" },
-	{ mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
-	# Image
-	{ mime = "image/{avif,hei?,jxl}", run = "magick" },
-	{ mime = "image/svg+xml", run = "svg" },
-	{ mime = "image/*", run = "image" },
-	# Video
-	{ mime = "video/*", run = "video" },
-	# Virtual file system
-	{ mime = "vfs/*", run = "vfs" },
+	{ url = "*/",                                                       run = "folder" },
+	# Código
+	{ mime = "text/*",                                                  run = "code" },
+	{ mime = "application/{mbox,javascript,wine-extension-ini}",        run = "code" },
+	# Imaxe
+	{ mime = "image/{avif,hei?,jxl}",                                   run = "magick" },
+	{ mime = "image/svg+xml",                                           run = "svg" },
+	{ mime = "image/*",                                                 run = "image" },
+	# Vídeo
+	{ mime = "video/*",                                                 run = "video" },
+	# Sistema de arquivos virtual
+	{ mime = "vfs/*",                                                   run = "vfs" },
 	# Error
-	{ mime = "null/*", run = "null" },
+	{ mime = "null/*",                                                  run = "null" },
 	# Fallback
-	{ url = "*", run = "file" },
+	{ url = "*",                                                        run = "file" },
 ]
 preloaders = [
-	# Image
-	{ mime = "image/{avif,hei?,jxl}", run = "magick" },
-	{ mime = "image/svg+xml", run = "svg" },
-	{ mime = "image/*", run = "image" },
-	# Video
-	{ mime = "video/*", run = "video" },
+	# Imaxes
+	{ mime = "image/{avif,hei?,jxl}",                                   run = "magick" },
+	{ mime = "image/svg+xml",                                           run = "svg" },
+	{ mime = "image/*",                                                 run = "image" },
+	# Vídeos
+	{ mime = "video/*",                                                 run = "video" },
 	# PDF
-	{ mime = "application/pdf", run = "pdf" },
-	# Font
-	{ mime = "font/*", run = "font" },
-	{ mime = "application/ms-opentype", run = "font" },
+	{ mime = "application/pdf",                                         run = "pdf" },
+	# Fontes
+	{ mime = "font/*",                                                  run = "font" },
+	{ mime = "application/ms-opentype",                                 run = "font" },
 ]
 previewers = [
-	{ url = "*/", run = "folder" },
-	# Code
-	{ mime = "text/*", run = "code" },
-	{ mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
+	{ url = "*/",                                                                                                run = "folder" },
+	# Código
+	{ mime = "text/*",                                                                                           run = "code" },
+	{ mime = "application/{mbox,javascript,wine-extension-ini}",                                                 run = "code" },
 	# JSON
-	{ mime = "application/{json,ndjson}", run = "json" },
-	# Image
-	{ mime = "image/{avif,hei?,jxl}", run = "magick" },
-	{ mime = "image/svg+xml", run = "svg" },
-	{ mime = "image/*", run = "image" },
-	# Video
-	{ mime = "video/*", run = "video" },
+	{ mime = "application/{json,ndjson}",                                                                        run = "json" },
+	# Imaxe
+	{ mime = "image/{avif,hei?,jxl}",                                                                            run = "magick" },
+	{ mime = "image/svg+xml",                                                                                    run = "svg" },
+	{ mime = "image/*",                                                                                          run = "image" },
+	# Vídeo
+	{ mime = "video/*",                                                                                          run = "video" },
 	# PDF
-	{ mime = "application/pdf", run = "pdf" },
-	# Archive
-	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", run = "archive" },
-	{ mime = "application/{debian*-package,redhat-package-manager,rpm,android.package-archive}", run = "archive" },
-	{ url = "*.{AppImage,appimage}", run = "archive" },
-	# Virtual Disk / Disk Image
-	{ mime = "application/{iso9660-image,qemu-disk,ms-wim,apple-diskimage}", run = "archive" },
-	{ mime = "application/virtualbox-{vhd,vhdx}", run = "archive" },
-	{ url = "*.{img,fat,ext,ext2,ext3,ext4,squashfs,ntfs,hfs,hfsx}", run = "archive" },
-	# Font
-	{ mime = "font/*", run = "font" },
-	{ mime = "application/ms-opentype", run = "font" },
-	# Empty file
-	{ mime = "inode/empty", run = "empty" },
-	# Virtual file system
-	{ mime = "vfs/*", run = "vfs" },
+	{ mime = "application/pdf",                                                                                  run = "pdf" },
+	# Archivo
+	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}",      run = "archive" },
+	{ mime = "application/{debian*-package,redhat-package-manager,rpm,android.package-archive}",                 run = "archive" },
+	{ url = "*.{AppImage,appimage}",                                                                             run = "archive" },
+	# Disco Virtual / Imaxe de Disco
+	{ mime = "application/{iso9660-image,qemu-disk,ms-wim,apple-diskimage}",                                     run = "archive" },
+	{ mime = "application/virtualbox-{vhd,vhdx}",                                                                run = "archive" },
+	{ url = "*.{img,fat,ext,ext2,ext3,ext4,squashfs,ntfs,hfs,hfsx}",                                             run = "archive" },
+	# Fontes
+	{ mime = "font/*",                                                                                           run = "font" },
+	{ mime = "application/ms-opentype",                                                                          run = "font" },
+	# Arquivo vacío
+	{ mime = "inode/empty",                                                                                      run = "empty" },
+	# Sistema de arquivos virtual
+	{ mime = "vfs/*",                                                                                            run = "vfs" },
 	# Error
-	{ mime = "null/*", run = "null" },
+	{ mime = "null/*",                                                                                           run = "null" },
 	# Fallback
-	{ url = "*", run = "file" },
+	{ url = "*",                                                                                                 run = "file" },
 ]
 
 [input]
@@ -182,56 +183,56 @@ cd_title  = "Cambiar directorio:"
 cd_origin = "top-center"
 cd_offset = [ 0, 2, 50, 3 ]
 
-# create
+# Crear
 create_title  = [ "Crear:", "Crear (dir):" ]
 create_origin = "top-center"
 create_offset = [ 0, 2, 50, 3 ]
 
-# rename
-rename_title  = "Renombrar:"
+# Renomear
+rename_title  = "Renomear:"
 rename_origin = "hovered"
 rename_offset = [ 0, 1, 50, 3 ]
 
-# filter
+# Filtrar
 filter_title  = "Filtrar:"
 filter_origin = "top-center"
 filter_offset = [ 0, 2, 50, 3 ]
 
-# find
-find_title  = [ "Encontrar siguiente:", "Encontrar anterior:" ]
+# Atopar
+find_title  = [ "Atopar seguinte:", "Atopar anterior:" ]
 find_origin = "top-center"
 find_offset = [ 0, 2, 50, 3 ]
 
-# search
+# Buscar
 search_title  = "Buscar con {n}:"
 search_origin = "top-center"
 search_offset = [ 0, 2, 50, 3 ]
 
-# shell
+# Shell
 shell_title  = [ "Shell:", "Shell (bloque):" ]
 shell_origin = "top-center"
 shell_offset = [ 0, 2, 50, 3 ]
 
 [confirm]
-# trash
-trash_title 	= "Mover a la papelera los {n} archivo{s} seleccionado{s}?"
+# Papelera
+trash_title 	= "Mover a papeleira os {n} arquivos{s} seleccionado{s}?"
 trash_origin	= "center"
 trash_offset	= [ 0, 0, 70, 20 ]
 
-# delete
-delete_title 	= "Eliminar permanentemente los {n} sarchivo{s} seleccionado{s}?"
+# Eliminar
+delete_title 	= "Eliminar permanentemente os {n} arquivos{s} seleccionado{s}?"
 delete_origin	= "center"
 delete_offset	= [ 0, 0, 70, 20 ]
 
-# overwrite
-overwrite_title  = "Sobreescribir archivo?"
-overwrite_body   = "Se sobreescribirán los siguientes archivos:"
+# Sobreescribir
+overwrite_title  = "Sobreescribir arquivo?"
+overwrite_body   = "Sobreescribiránse os siguientes arquivos:"
 overwrite_origin = "center"
 overwrite_offset = [ 0, 0, 50, 15 ]
 
-# quit
-quit_title  = "Salir?"
-quit_body   = "Hay tareas sin completar, salit de todas formas?\n(Abre el gestor de tareas con la tecla por defecto 'w')"
+# Salir
+quit_title  = "Saír?"
+quit_body   = "Hai tarefas sen completar, sair de todas formas?\n(Abre o xestor de tarefas ca tecla 'w')"
 quit_origin = "center"
 quit_offset = [ 0, 0, 50, 15 ]
 
